# Ascend-msit

./: .gitignore  .gitmodules  OWNERS  README.md  as  junyu.yaml  test_communication.py
msprechecker/: MANIFEST.in  README.md  a  b  config.json  msprechecker_env.sh  pyproject.toml  requirements.txt
msprechecker/msprechecker/: __main__.py  cli.py  util.py
msprechecker/msprechecker/checkers/: __init__.py  ascend.py  base.py  env.py  hccl.py  network.py  pd.py  stress.py  sys.py
msprechecker/msprechecker/cmate/: __init__.py  _ast.py  _test.py  cmate.py  custom_fn.py  data_source.py  lexer.py  parser.py  util.py  visitor.py
msprechecker/msprechecker/collectors/: __init__.py  ascend.py  base.py  config.py  env.py  hccl.py  network.py  sys.py  weight.py
msprechecker/msprechecker/commands/: __init__.py  _cmate.py  banner.py  base.py  compare.py  coordinator.py  dump.py  legacy.py  precheck.py
msprechecker/msprechecker/comparators/: __init__.py
msprechecker/msprechecker/core/: checker.py  collector.py  strategy.py
msprechecker/msprechecker/prechecker/: __init__.py  cluster_collector.py  config_checker.py  env_checker.py  hccl_checker.py  match_special_value.py  model_checker.py  register.py  suggestions.py  system_checker.py  utils.py
msprechecker/msprechecker/preset_yaml_checkers/: config_check_dsr1_pd_A2.yaml  default_config.yaml
msprechecker/msprechecker/presets/: __init__.py  default.yaml  manager.py  mindie.cmate  vllm.cmate
msprechecker/msprechecker/reporters/: __init__.py  strategy.py
msprechecker/msprechecker/test/: test_utils.py
msprechecker/msprechecker/utils/: __init__.py  ascend.py  errors.py  evaluator.py  helper.py  log.py  macro_expander.py  network.py  progress_bar.py  traverser.py  version.py
msprechecker/msprechecker/validators/: __init__.py  base.py  cmp.py  docker.py  enum.py  path.py  range.py
msprechecker/test/: test_main.py
msprechecker/test/prechecker/: test_cluster_checker.py  test_config_checker.py  test_hccl_checker.py  test_model_checker.py  test_suggestions.py  test_system_checker.py  test_utils.py
msprechecker/test/test_collectors/: test_config.py  test_sys.py
msprechecker/test/test_utils/: test_evaluator.py  test_helper.py  test_version.py
msprechecker/tests/: test_util.py
msprechecker/tests/test_cmate/: test_lexer.py  test_parser.py  test_visitor.py
msprechecker/tests/test_collectors/: test_config.py  test_env.py  test_sys.py
msprechecker/tests/test_utils/: test_evaluator.py  test_helper.py  test_version.py
msserverprofiler/: CMakeLists.txt  OWNERS  parse_data_to_trace.py
msserverprofiler/docs/: 推理服务化性能数据采集.md  解析推理服务化性能数据.md  解析推理服务化性能数据为trace格式.md
msserverprofiler/include/: msServerProfiler.h  msServerProfilerDefines.h  msServerProfilerMarker.h
msserverprofiler/ms_server_profiler/: __init__.py  constant.py  ms_server_profiler.py  mstx.py  parse.py  utils.py
msserverprofiler/ms_server_profiler/exporters/: exporter_trace.py
msserverprofiler/ms_server_profiler/plugins/: plugin_common.py  plugin_cpu.py  plugin_cpu_timestamp.py  plugin_timestamp.py  utils.py
msserverprofiler/ms_server_profiler_analyze/: analyze.py
msserverprofiler/ms_server_profiler_analyze/exporters/: exporter_req_status.py
msserverprofiler/ms_server_profiler_analyze/plugins/: plugin_req_status.py
msserverprofiler/ms_service_profiler/: __init__.py  analyze.py
msserverprofiler/ms_service_profiler/exporters/: exporter_summary.py
msserverprofiler/msserverprofiler/: analyze.py
msserverprofiler/msserverprofiler/exporters/: exporter_summary.py
msserverprofiler/scripts/: set_env.sh
msserverprofiler/src/: msServerProfiler.cpp  msServerProfilerMarker.cpp
msserverprofiler/test/: default.config  test.cpp  test_exporter_req_status.py  test_parse_data_to_trace.py  test_plugins.py
msservice_advisor/: pyproject.toml
msservice_advisor/msservice_advisor/profiling_analyze/: __init__.py  base_analyze.py  batch_analyze.py  register.py
msserviceprofiler/: Changelog.md  OWNERS  README.md  __main__.py  pyproject.toml
msserviceprofiler/docs/: msguard.md  msguard_instruct.md  msserviceprofiler_multi_analyze_instruct.md  security_statement.md  service_performance_split_tool_instruct.md  service_profiling_advisor_instruct.md  serviceparam_optimizer_instruct.md  vLLM服务化性能采集工具.md  vllm_profiler工具.md  服务化专家建议工具.md  服务化多维度解析工具.md  服务化性能数据比对工具.md  服务化拆解工具.md  服务化自动寻优工具.md  服务化自动调优工具.md  比对工具.md
msserviceprofiler/include/msServiceProfiler/: Profiler.h  ServiceProfilerInterface.h  Tracer.h  msServiceProfiler.h
msserviceprofiler/modelevalstate/: analysis.py  common.py  config.json  sitecustomize.py
msserviceprofiler/modelevalstate/config/: config.py
msserviceprofiler/modelevalstate/data_feature/: dataset.py  dataset_with_modin.py  dataset_with_swifter.py  v1.py
msserviceprofiler/modelevalstate/inference/: collect.py  common.py  dataset.py  file_reader.py  simulate.py  state_eval_v1.py
msserviceprofiler/modelevalstate/modelevalstate/: config.json  run_benchmark.sh  sitecustomize.py
msserviceprofiler/modelevalstate/optimizer/: optimizer.py  server.py
msserviceprofiler/modelevalstate/patch/: init.py  patch_manager.py  plugin_simulate_patch.py
msserviceprofiler/modelevalstate/train/: pretrain.py  source_to_train.py  state_param.py
msserviceprofiler/ms_service_profiler_ext/: __init__.py  analyze.py  compare.py  split.py
msserviceprofiler/ms_service_profiler_ext/common/: constants.py  sec.py  split_utils.py  utils.py
msserviceprofiler/ms_service_profiler_ext/compare/: collector.py  comparator.py  comparator.py.bak  comparator.py.bak2  main.py
msserviceprofiler/ms_service_profiler_ext/compare_tools/: __init__.py  base.py  collector.py  compare_visualization.json  csv_comparator.py  db_comparator.py
msserviceprofiler/ms_service_profiler_ext/exporters/: exporter_decode.py  exporter_prefill.py  exporter_summary.py
msserviceprofiler/ms_service_profiler_ext/secur/: __init__.py  param_validation.py
msserviceprofiler/msserviceprofiler/: __main__.py
msserviceprofiler/test/: run_st.py  run_ut.sh
(+4242 files in other folders)
