[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msprechecker"
version = "0.0.7"
description = "MindStudio Prechecker"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ms", "prechecker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyyaml",
    "psutil",
    "msguard",
    "importlib_metadata; python_version == '3.7'"
]

requires-python = ">=3.7"

[project.scripts]
msprechecker = "msprechecker.__main__:main"

[project.urls]
source = "https://gitee.com/ascend/msit/tree/master/msprechecker"
documentation = "https://gitee.com/ascend/msit/tree/master/msprechecker"
tracker = "https://gitee.com/ascend/msit/issues"

[tool.setuptools]
packages = {find = {}}
include-package-data = true
