[tool.poetry]
name = "msserviceprofiler"
version = "1.1.1"
description = ""
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
filelock = "^3.13.1"
pydantic-settings = "^2.2.1"
pydantic = "^2.10.5"
pyswarms = "^1.3.0"
loguru = "^0.7.3"
psutil = "^6.0.0"
xgboost = {version = "^2.0.0", optional = true}
seaborn = {version = "^0.13.2", optional = true}
matplotlib = {version = "^3.7.2", optional = true}
scipy = {version = "^1.10.1", optional = true}
scikit-learn = {version = "^1.3.2", optional = true}
swifter = { version = "^1.4.0", extras = ["groupby"], optional = true }
modin = { version = "^0.32.0", extras = ["all"], optional = true }

[dependency-groups]

[tool.poetry.extras]
train = ["xgboost", "seaborn", "matplotlib", "scipy", "scikit-learn"]
speed = ["xgboost", "seaborn", "matplotlib", "scipy", "scikit-learn", "swifter", "modin"]
[tool.poetry.scripts]
msserviceprofiler="msserviceprofiler.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
